# disseqt

./: .gitignore  Cargo.toml  README.md
examples/: extract_pulses.rs  kspace.rs  mr0_importer.rs  plot_pulse.rs
examples/3DSnapshotGRE_Comparision_E_0_64_64_8_alternating_fully_sampled/: SimulationProtocol_ADC.dsv  SimulationProtocol_GRX.dsv  SimulationProtocol_GRY.dsv  SimulationProtocol_GRZ.dsv  SimulationProtocol_NC1.dsv  SimulationProtocol_RF2.dsv  SimulationProtocol_RFD.dsv  SimulationProtocol_RFP.dsv  SimulationProtocol_RP2.dsv
src/: frontend.rs  lib.rs  sequence.rs  types.rs  util.rs
src/backend_dsv/: adc.rs  grad.rs  helpers.rs  mod.rs  rf.rs  trigger.rs
src/backend_pulseq/: helpers.rs  mod.rs
src/types/: mod.rs  scalar_types.rs  vector_types.rs
