[package]
name = "disseqt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulseq-rs = { git = "https://github.com/pulseq-frame/pulseq-rs.git" }

[dev-dependencies]
assert2 = "0.3.11"
rand = "0.8.5"
